--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Ey3cue",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.4"
+    "express": "^4.18.2"
   }
 }
